# UMDDZ

./: .gitignore  README.md  main.py  pyproject.toml  training.txt  wyniki.txt
data/results/evaluation/: evaluation_report.txt
data/results/predictions/prediction_20250524_141027/: prediction.txt
data/results/predictions/prediction_20250524_141104/: prediction.txt
data/results/predictions/prediction_20250524_150438/: prediction.txt
data/results/predictions/prediction_20250524_150509/: prediction.txt
data/results/predictions/prediction_20250524_150541/: prediction.txt
data/results/predictions/prediction_20250524_150548/: prediction.txt
data/results/predictions/prediction_20250524_152108/: prediction.txt
src/: __init__.py  analysis.py  data_loader.py  evaluate.py  model.py  predict.py  train.py  train_old.py
utils/: __init__.py  logger.py  path.py  setup.py
